force-app/main/default/objects/RR_Snapshot_Batch_Log__c/RR_Snapshot_Batch_Log__c.object-meta.xml
<CustomObject>
    <label>RR Snapshot Batch Log</label>
    <pluralLabel>RR Snapshot Batch Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>RR-LOG-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>