force-app/main/default/objects/RR_Snapshot_Batch_Log__c/fields/Customers_Failed__c.field-meta.xml
<CustomField>
    <fullName>Customers_Failed__c</fullName>
    <label>Customers Failed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>