force-app/main/default/objects/RR_Snapshot_Batch_Log__c/fields/Force_Recalculate__c.field-meta.xml
<CustomField>
    <fullName>Force_Recalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Recalculate</label>
    <type>Checkbox</type>
</CustomField>