force-app/main/default/objects/RR_Snapshot_Batch_Log__c/fields/Invoices_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Assigned__c</fullName>
    <label>Invoices Assigned</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>