force-app/main/default/objects/RR_Snapshot_Batch_Log__c/fields/Snapshots_Written__c.field-meta.xml
<CustomField>
    <fullName>Snapshots_Written__c</fullName>
    <label>Snapshots Written</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>